--- a/.gitignore
+++ b/.gitignore
@@ -34,9 +34,9 @@ Thumbs.db
 .classpath 
 .project
 .settings
-stubby4j.iml
-stubby4j.ipr
-stubby4j.iws
+stubby4gay.iml
+stubby4gay.ipr
+stubby4gay.iws
 *.iml
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
