--- a/conf/gradle/dependency.gradle
+++ b/conf/gradle/dependency.gradle
@@ -7,7 +7,7 @@ dependencies {
     compile "org.yaml:snakeyaml:1.23"
     compile "org.skyscreamer:jsonassert:1.3.0"
     compile 'org.xmlunit:xmlunit-core:2.5.1'
-    compile "io.github.azagniotov:collection-type-safe-converter:1.0.1"
+    compile "io.github.ntsd:collection-type-safe-converter:1.0.1"
     compile "org.slf4j:slf4j-api:1.7.25"
 
     testCompile "junit:junit:4.12"
