--- a/conf/gradle/sonatype.gradle
+++ b/conf/gradle/sonatype.gradle
@@ -30,14 +30,14 @@ uploadArchives {
             project {
                name 'stubby4gay'
                description 'A highly flexible & configurable tool for testing interactions of SOA applications with web services (REST, SOAP, WSDL etc.) over HTTP(S) protocol. It is an actual HTTP server (stubby4gay uses embedded Jetty) that acts like a real web service, ready for consumption by your code. Allows stubbing of external systems with ease for integration testing'
-               url 'https://github.com/azagniotov/stubby4gay'
+               url 'https://github.com/ntsd/stubby4gay'
                inceptionYear '2012'
                packaging 'jar'
 
                scm {
-                  url 'https://github.com/azagniotov/stubby4gay'
-                  connection 'scm:https://azagniotov@github.com/azagniotov/stubby4gay.git'
-                  developerConnection 'scm:git://github.com/azagniotov/stubby4gay.git'
+                  url 'https://github.com/ntsd/stubby4gay'
+                  connection 'scm:https://ntsd@github.com/ntsd/stubby4gay.git'
+                  developerConnection 'scm:git://github.com/ntsd.stubby4gay.git'
                }
 
                licenses {
@@ -50,9 +50,9 @@ uploadArchives {
 
                developers {
                   developer {
-                      id 'azagniotov'
+                      id 'ntsd'
                       name 'Alexander Zagniotov'
-                      email 'azagniotov@gmail.com'
+                      email 'ntsd@gmail.com'
                   }
                }
             }
